Bug 54367 - WebCore fails to build with Clang's -Woverloaded-virtual
Summary: WebCore fails to build with Clang's -Woverloaded-virtual
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on: 54301 54305 54909 54914 54920 54922 54923 54924
Blocks:
  Show dependency treegraph
 
Reported: 2011-02-13 15:43 PST by Cameron Zwarich (cpst)
Modified: 2011-02-22 15:36 PST (History)
5 users (show)

See Also:


Attachments
Patch for one case (1.37 KB, patch)
2011-02-13 15:47 PST, Cameron Zwarich (cpst)
andersca: review+
zwarich: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Cameron Zwarich (cpst) 2011-02-13 15:43:55 PST
WebCore fails to build with Clang's -Woverloaded-virtual for a number of reasons. We should fix them all (besides wanting to build with Clang), as they are usually the sign of real bugs.
Comment 1 Cameron Zwarich (cpst) 2011-02-13 15:47:41 PST
Created attachment 82280 [details]
Patch for one case
Comment 2 Simon Fraser (smfr) 2011-02-13 16:01:22 PST
See bug 23120.
Comment 3 Cameron Zwarich (cpst) 2011-02-13 16:03:13 PST
Sorry for not finding the old bug. Unfortunately, this warning is enabled by default with Clang, whereas it is not enabled by default with GCC. ;-)

Should we dupe them?
Comment 4 Cameron Zwarich (cpst) 2011-02-13 16:14:37 PST
Landed in r78447.
Comment 5 Nico Weber 2011-02-21 18:53:57 PST
The blocker list is (at the moment) a complete list of issues that prevents turning this on for the chromium port. All but one of the blockers have patches waiting for review.
Comment 6 Nico Weber 2011-02-21 19:05:17 PST
…and now they all have patches attached.
Comment 7 Nico Weber 2011-02-22 15:36:02 PST
The chromium port now builds fine with clang.
Comment 8 Nico Weber 2011-02-22 15:36:16 PST
(…with -Woverloaded-virtual, that is)