Reviewed by Anders Carlsson.

WebCore fails to build with Clang's -Woverloaded-virtual
https://bugs.webkit.org/show_bug.cgi?id=54367

* loader/PingLoader.h:
(WebCore::PingLoader::didReceiveData): Change the method signature to match the signature
in the base class.


Canonical link: https://commits.webkit.org/68450@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78447 268f45cc-cd09-0410-ab3c-d52691b4dbfc